<resources>
    <string name="app_name">Rijks Museum</string>
    <string name="loading">Loading…</string>
    <string name="network_error">Error.</string>
    <string name="network_retry">RTO.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="don_t_have_account_register">Don\'t Have Account ? </string>
    <string name="register">Register</string>
    <string name="i_agree_with_term_and_condition">I Agree with Term and Condition</string>
    <string name="icon_splash">Icon Splash</string>
    <string name="logout">Logout</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_profile">Profile</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="press_again_exit_app">Tekan lagi untuk keluar dari Aplikasi</string>
</resources>
